--- a/index.html
+++ b/index.html
@@ -3,10 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <title>PANDA</title>
 </head>
 <body>
+
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#shoes">Shoes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#backpack">Backpack</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    </div>
+
+    <div class="container carousel">
+        <div id="carouselExampleControls" class="carousel slide pink-bg" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <div class="row align-items-center">
+                      <div class="col-md-7">
+                        <h1>BEATS for Relaxing World</h1>
+                        <p class="slide-para">BEATS the brand of Headphone who makes the world joyful.</p>
+                        <h1 class="price">$750</h1>
+                        <button class="buy-now-button">Buy Now</button>
+                      </div>
+                      <div class="col-md-5">
+                        <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                        <h1>SONY LED TV 4A PRO 32</h1>
+                        <p class="slide-para">This is the best tv ever in the world who wants to waste their time.</p>
+                        <h1 class="price">$1289</h1>
+                        <button class="buy-now-button">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                        <h1>X-BOX One for Gaming World</h1>
+                        <p class="slide-para">The only one best gaming console in the world. This is a complete box of gaming and entertainment.</p>
+                        <h1 class="price">$1159</h1>
+                        <button class="buy-now-button">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
+
+    <div class="container categories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cat1 d-flex justify-content-between align-items-center">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat2 d-flex justify-content-between align-items-center">
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat3 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container shoes" id="shoes">
+        <h3 style="font-weight: bold;">Shoes</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">SPY-350</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <h5>$350</h5>
+                <button class="shoes-buy-now-btn">BUY NOW ></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">NIKE Pump</h5>
+                <p class="card-text">This card has supporting text below as a natural and world class lead-in to additional content.</p>
+                <h5>$400</h5>
+                <button class="shoes-buy-now-btn">BUY NOW ></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">NIKE Air Max</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <h5>$450</h5>
+                <button class="shoes-buy-now-btn">BUY NOW ></button>                
+              </div>
+            </div>
+          </div>
+    </div>
 
 
     
