--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>PANDA</title>
 </head>
 <body>
-
+<!-- Navigation Section-->
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
@@ -30,13 +30,13 @@
                   <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contact">Contact Us</a>
+                  <a class="nav-link" href="#subscribe">Subscribe</a>
                 </li>
               </ul>
             </div>
           </nav>
     </div>
-
+<!--Slidebar Section-->
     <div class="container carousel">
         <div id="carouselExampleControls" class="carousel slide pink-bg" data-ride="carousel">
             <div class="carousel-inner">
@@ -90,7 +90,7 @@
             </a>
           </div>
     </div>
-
+<!--Categories Section-->
     <div class="container categories">
         <div class="row">
             <div class="col-md-4">
@@ -113,7 +113,7 @@
             </div>
         </div>
     </div>
-
+<!--Shoes Section-->
     <div class="container shoes" id="shoes">
         <h3 style="font-weight: bold;">Shoes</h3>
         <div class="card-deck">
@@ -146,15 +146,53 @@
             </div>
           </div>
     </div>
-
-
-    
-
-
-
-
-
-
+<!--Backpack Section-->
+    <div class="container backpack" id="backpack">
+      <h3 style="font-weight: bold;">Backpack</h3>
+      <div class="card-deck">
+          <div class="card">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Ison Backpack</h5>
+              <p class="card-text">Some quick example text to build on the card title.</p>
+              <h5>$350</h5>
+              <button class="backpack-buy-now-btn">BUY NOW ></button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Biaowang Backpack </h5>
+              <p class="card-text">Some quick example text to build on the card title.</p>
+              <h5>$400</h5>
+              <button class="backpack-buy-now-btn">BUY NOW ></button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Dxyizu WS54 Smart </h5>
+              <p class="card-text">Some quick example text to build on the card title.</p>
+              <h5>$450</h5>
+              <button class="backpack-buy-now-btn">BUY NOW ></button>                
+            </div>
+          </div>
+        </div>
+  </div>
+<!--Subscribe Section-->
+  <div class="container pink-bg d-flex justify-content-center align-items-center" id="subscribe">
+      <div class="form">
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h6>Get updates on sales specials and more</h6>
+        <input class="form-control email-field" type="email" placeholder="Enter Your Email">
+        <button class="backpack-buy-now-btn">SUBMIT</button>
+      </div>
+  </div>
+<!--Footer Section-->
+  <footer>
+    <small>&copy; 2020, Panda Commerce. All rights reserved, Dhaka, Bangladesh.</small>
+  </footer>
+<!--Bootstrap Carousel JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
